syntax = "proto3";

import "common.proto";
option java_package = "ca.wisecode.lucene.grpc.models";
option java_outer_classname = "QueryProto";
option java_multiple_files = true;

service QueryService {
    rpc query (Pager) returns (JsonOut) {}
}

message SortRule {
    string name = 1;
    string type = 2;
    bool asc = 3;
}
message FilterRule {
    string name = 1;
    string queryMode = 2;
    string value = 3;
    string logic = 4;
}

message Pager {
    int32 pageSize = 2;
    string lastID = 3;
    repeated FilterRule filterRules = 4;
    repeated SortRule sortRules = 5;
}



